[gd_scene load_steps=11 format=3 uid="uid://brw7h3l8kq28v"]

[ext_resource type="Script" uid="uid://ix1itfapst75" path="res://scripts/UI/diuloge_systerm.gd" id="1_ii7p6"]
[ext_resource type="Texture2D" uid="uid://bqk4kinvpkdxe" path="res://Sprites/Objects/Stary 9-slice.png" id="2_taeu3"]
[ext_resource type="AudioStream" uid="uid://dqbbvhixff2kk" path="res://Audio/Default dialogue voice.wav" id="3_8r266"]
[ext_resource type="Theme" uid="uid://bjdm6m3qu5yys" path="res://Resourses/invisable button theme.tres" id="4_3aq4e"]
[ext_resource type="Texture2D" uid="uid://cohxdldrv2a3q" path="res://Sprites/Objects/slider graber blue.png" id="4_hac6l"]
[ext_resource type="Script" uid="uid://64s3fd38gfnr" path="res://scripts/Components/Button Scelect.gd" id="4_nnv7x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t0gi1"]
size = Vector2(1152, 136)

[sub_resource type="Animation" id="Animation_g53lw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dialogue UI/Response:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(936, 600)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Dialogue UI/Response:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_4waeo"]
resource_name = "slide in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dialogue UI/Response:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(936, 600), Vector2(800, 600)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Dialogue UI/Response:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1.93187),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i8n3f"]
_data = {
&"RESET": SubResource("Animation_g53lw"),
&"slide in": SubResource("Animation_4waeo")
}

[node name="Diuloge systerm" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ii7p6")

[node name="Overlap Detection" type="Area2D" parent="."]
show_behind_parent = true
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Overlap Detection"]
position = Vector2(576, 572)
shape = SubResource("RectangleShape2D_t0gi1")

[node name="Dialogue UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Sprites" type="Control" parent="Dialogue UI"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NinePatch text backround" type="NinePatchRect" parent="Dialogue UI/Sprites"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 0.014
anchor_bottom = 0.025
offset_left = 200.0
offset_top = 504.0
offset_right = 951.44
offset_bottom = 639.0
texture = ExtResource("2_taeu3")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Icon" type="TextureRect" parent="Dialogue UI/Sprites"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 216.0
offset_top = 520.0
offset_right = 316.0
offset_bottom = 620.0
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Dialogue UI"]
texture_filter = 1
clip_contents = false
layout_mode = 2
offset_left = 320.0
offset_top = 519.0
offset_right = 944.0
offset_bottom = 623.0
theme_override_constants/line_separation = 5
bbcode_enabled = true
scroll_active = false
autowrap_mode = 2
tab_size = 5
visible_characters = 0
visible_ratio = 0.0

[node name="Voice" type="AudioStreamPlayer2D" parent="Dialogue UI"]
stream = ExtResource("3_8r266")
bus = &"SFX"

[node name="Options" type="Control" parent="Dialogue UI" node_paths=PackedStringArray("scelect_icon", "button_0", "button_1", "button_2", "button_3")]
visible = false
layout_mode = 1
anchor_top = 0.789
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = -7.27197
offset_right = -200.0
offset_bottom = -8.0
theme = ExtResource("4_3aq4e")
script = ExtResource("4_nnv7x")
dialoue_choices = true
scelect_icon = NodePath("Scelect icon")
button_0 = NodePath("option 0")
button_1 = NodePath("option 1")
button_2 = NodePath("option 2")
button_3 = NodePath("option 3")

[node name="option 0" type="Button" parent="Dialogue UI/Options"]
texture_filter = 1
layout_mode = 2
offset_left = 184.0
offset_top = 77.0
offset_right = 376.0
offset_bottom = 109.0
text = "Yes"
alignment = 0

[node name="option 1" type="Button" parent="Dialogue UI/Options"]
visible = false
texture_filter = 1
layout_mode = 2
offset_left = 504.0
offset_top = 80.0
offset_right = 696.0
offset_bottom = 112.0
text = "No"
alignment = 0

[node name="option 2" type="Button" parent="Dialogue UI/Options"]
visible = false
texture_filter = 1
layout_mode = 2
offset_left = 184.0
offset_top = 16.0
offset_right = 376.0
offset_bottom = 48.0
text = "Maybe"
alignment = 0

[node name="option 3" type="Button" parent="Dialogue UI/Options"]
visible = false
texture_filter = 1
layout_mode = 2
offset_left = 504.0
offset_top = 16.0
offset_right = 696.0
offset_bottom = 48.0
text = "IDK"
alignment = 0

[node name="Scelect icon" type="Sprite2D" parent="Dialogue UI/Options"]
texture_filter = 1
position = Vector2(376, 72)
texture = ExtResource("4_hac6l")

[node name="Response" type="RichTextLabel" parent="Dialogue UI"]
modulate = Color(1, 1, 1, 0)
texture_filter = 1
clip_contents = false
layout_mode = 0
offset_left = 936.0
offset_top = 600.0
offset_right = 1152.0
offset_bottom = 648.0
scale = Vector2(0.6, 0.6)
bbcode_enabled = true
text = "[Inset litraly 
any respone]"
scroll_active = false

[node name="Show Responce" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_i8n3f")
}

[connection signal="area_entered" from="Overlap Detection" to="." method="_on_overlap_detection_area_entered"]
[connection signal="area_exited" from="Overlap Detection" to="." method="_on_overlap_detection_area_exited"]
[connection signal="body_entered" from="Overlap Detection" to="." method="_on_overlap_detection_body_entered"]
[connection signal="body_exited" from="Overlap Detection" to="." method="_on_overlap_detection_body_exited"]
